fix(stepper): items not aligned (#686)
* fix(step): use span and vertical-alignment

* fix(step): alignment of step content

---------

--- a/packages/core/src/components/stepper/step/step.scss
+++ b/packages/core/src/components/stepper/step/step.scss
@@ -9,10 +9,6 @@
   position: relative;
   display: table-cell;
 
-  tds-icon {
-    line-height: 1;
-  }
-
   [role='listitem'] {
     display: flex;
     justify-content: start;
@@ -32,6 +28,14 @@
       .content-container {
         height: 30px;
         min-width: 30px;
+
+        tds-icon {
+          vertical-align: bottom;
+        }
+
+        .index-container {
+          vertical-align: sub;
+        }
       }
 
       &.vertical {
@@ -95,9 +99,20 @@
       font: var(--tds-detail-05);
       letter-spacing: var(--tds-detail-05-ls);
 
+      .index-container {
+        vertical-align: -webkit-baseline-middle;
+        vertical-align: -moz-middle-with-baseline;
+      }
+
       .content-container {
         height: 24px;
         min-width: 24px;
+      }
+
+      .tds-step-icon {
+        vertical-align: -webkit-baseline-middle;
+        vertical-align: -moz-middle-with-baseline;
+        margin-top: -2px;
       }
 
       &.vertical {
@@ -168,9 +183,7 @@
     .content-container {
       border-radius: 100px;
       border: 1px solid var(--tds-stepper-icon-background);
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      text-align: center;
       position: relative;
 
       &.error {
